--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <header class="container mt-4">
         <h1>Découvrez MonApp</h1>
         <p>NETFLIX MOD: l'option premuim desactiver.</p> <br>
-        <img src="C:\xamppdb\htdocs\appstore\netflix.jpg" class="app-image img-fluid" alt="Capture d'écran de l'application">
+        <img src="netflix.jpg" class="app-image img-fluid" alt="Capture d'écran de l'application">
         <br>
         <!-- Bouton vers la page de téléchargement -->
         <a href="download.html" class="btn btn-success btn-lg btn-download">Télécharger l'Application</a>
