--- a/download2.html
+++ b/download2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Préparation du Téléchargement</title>
+    <title>Téléchargement en cours...</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <style>
         body {
@@ -16,61 +16,97 @@
             font-size: 24px;
         }
         p {
-            font-size: 16px;
+            font-size: 18px;
+            margin-bottom: 20px;
+            color: red;
+        }
+        /* Styles pour les bannières publicitaires */
+        .publicite-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-top: 30px;
             margin-bottom: 20px;
         }
-        .btn-continue {
-            margin-top: 20px;
-            font-size: 18px;
-            padding: 12px;
-            width: 90%;
+        .publicite {
+            background-color: #ffcc00;
+            color: #333;
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
             max-width: 400px;
+            border: 3px solid #ff8800;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+            animation: clignotement 1.5s infinite alternate;
+            margin-bottom: 20px;
         }
-        .navbar {
-            padding: 10px;
+        .publicite p {
+            font-size: 16px;
+            font-weight: bold;
+            margin-bottom: 15px;
+        }
+        .btn-publicite {
+            display: inline-block;
+            padding: 10px 15px;
+            background-color: #25D366;
+            color: white;
+            text-decoration: none;
+            font-size: 16px;
+            font-weight: bold;
+            border-radius: 5px;
+            transition: transform 0.2s ease-in-out;
+        }
+        .btn-publicite:hover {
+            transform: scale(1.1);
+            background-color: #1ebd57;
+        }
+        @keyframes clignotement {
+            0% { transform: scale(1); }
+            100% { transform: scale(1.05); }
         }
     </style>
 </head>
 <body>
 
-    <!-- Barre de navigation -->
-    <nav class="navbar navbar-dark bg-primary">
-        <div class="container text-center">
-            <a class="navbar-brand mx-auto" href="#">MonApp</a>
-        </div>
-    </nav>
-
-    <!-- Section principale -->
-    <header class="container mt-4">
-        <h1>Préparation du Téléchargement...</h1>
-        <p>Merci de patienter pendant la préparation du fichier.</p>
-
-        <!-- Bouton "Continuer" -->
-        <button class="btn btn-warning btn-lg btn-continue" id="continue-btn" onclick="startCountdown()">Continuer</button>
-
-        <!-- Compte à rebours (initialement caché) -->
-        <p id="countdown-text" class="mt-3" style="display:none;">Le téléchargement commencera dans <span id="countdown">10</span> secondes...</p>
+    <header class="container mt-5">
+        <h1>Le téléchargement va commencer bientôt...</h1>
+        <p id="countdown">Préparation du fichier...</p>
     </header>
 
+    <!-- JavaScript du compte à rebours -->
     <script>
-        function startCountdown() {
-            document.getElementById("continue-btn").disabled = true; // Désactiver le bouton
-            document.getElementById("countdown-text").style.display = "block"; // Afficher le compte à rebours
+        let countdown = 10;
+        let countdownElement = document.getElementById("countdown");
 
-            let countdown = 10;
-            let countdownElement = document.getElementById("countdown");
+        let interval = setInterval(() => {
+            countdown--;
+            countdownElement.innerText = "Veuillez patienter " + countdown + " secondes...";
 
-            let interval = setInterval(() => {
-                countdown--;
-                countdownElement.innerText = countdown;
-
-                if (countdown === 0) {
-                    clearInterval(interval);
-                    window.location.href = "https://dc444.4sync.com/download/upwcH6IQ/Netflix_v930_MOD.apk?dsid=nSxqp12o.c2f00b5fc7189094baaf00037a90f422&sbsr=a828dfe6d8cc42030a890c1af35b94f9b3d&bip=NDEuNzguMTM5LjI2&lgfp=40"; // Redirige vers la page de téléchargement
-                }
-            }, 1000);
-        }
+            if (countdown === 0) {
+                clearInterval(interval);
+                window.location.href = "download2.html"; // Redirige vers le fichier APK
+            }
+        }, 1000);
     </script>
+
+    <!-- Bannières publicitaires en bas de page -->
+    <div class="publicite-container">
+        <!-- Bannière pour les produits et services -->
+        <div class="publicite">
+            <p>🔔 Vous avez des produits à écouler ou cherchez plus de visibilité ?  
+            Vous proposez des services ou avez des offres à partager ?  
+            📢 Rejoignez notre groupe WhatsApp et boostez votre activité dès maintenant !</p>
+            <a href="https://chat.whatsapp.com/HsJcpTAYS1kLj4amkVL53t" target="_blank" class="btn-publicite">👉 Rejoindre le Groupe</a>
+        </div>
+
+        <!-- Bannière pour les offres d'emploi -->
+        <div class="publicite">
+            <p>👔 Vous recherchez un emploi ou avez des opportunités à partager ?  
+            🚀 Ne manquez plus aucune offre et agrandissez votre réseau professionnel !  
+            📢 Rejoignez notre groupe WhatsApp dédié aux offres d'emploi dès maintenant.</p>
+            <a href="https://chat.whatsapp.com/EDEdQVzwbm9GtRIWV9HupW" target="_blank" class="btn-publicite">👉 Rejoindre le Groupe Emploi</a>
+        </div>
+    </div>
 
 </body>
 </html>
