--- a/download.html
+++ b/download.html
@@ -10,6 +10,9 @@
             background-color: #f8f9fa;
             text-align: center;
             padding: 20px;
+            border: 5px solid #007bff; /* Bordure bleue */
+            border-radius: 10px; /* Coins arrondis */
+            margin: 20px; /* Espacement autour de la bordure */
         }
         h1 {
             color: #007bff;
@@ -90,9 +93,9 @@
     <!-- Bannière publicitaire en bas de page -->
     <div class="publicite-container">
         <div class="publicite">
-            <p>📢 Restez informé en avant-première ! 🔔<br>  
-            Rejoignez notre forum WhatsApp officiel pour ne manquer aucune mise à jour du site.<br>  
-            ✅ Soyez les premiers à découvrir nos nouveautés et améliorations !</p>
+            <p>📢 **Restez informé en avant-première !** 🔔<br>  
+            Rejoignez notre **forum WhatsApp officiel** pour ne manquer **aucune mise à jour** du site.<br>  
+            ✅ **Soyez les premiers à découvrir nos nouveautés et améliorations !**</p>
             <a href="https://chat.whatsapp.com/ExbqYAxKIdyBVAdH5tdkA0" target="_blank" class="btn-publicite">👉 Rejoindre le Forum</a>
         </div>
     </div>
