--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
             background-color: #f8f9fa;
             text-align: center;
             padding: 20px;
+            border: 5px solid #007bff; /* Bordure bleue */
+            border-radius: 10px; /* Coins arrondis */
+            margin: 20px; /* Espacement autour de la bordure */
         }
         h1 {
             color: #007bff;
@@ -86,21 +89,20 @@
     <!-- Barre de navigation -->
     <nav class="navbar navbar-dark bg-primary">
         <div class="container text-center">
-            <a class="navbar-brand mx-auto" href="#">MonApp</a>
+            <a class="navbar-brand mx-auto" href="#">NETFLIX PREMUIM</a>
         </div>
     </nav>
 
     <!-- Section principale -->
     <header class="container mt-4">
-        <h1>Découvrez MonApp</h1>
-        <p>NETFLIX MOD: l'option premium désactivée.</p> <br>
+        <h1>Découvrez NETFLIX PREMUIM DESACTIVER</h1>
+        <p>NETFLIX: l'option premium désactivée.</p> <br>
         <img src="netflix.jpg" class="app-image img-fluid" alt="Capture d'écran de l'application">
         <br>
         <!-- Bouton vers la page de téléchargement -->
         <a href="download.html" class="btn btn-success btn-lg btn-download">Télécharger l'Application</a>
     </header>
 
-    
     <!-- Bannières publicitaires en bas de page -->
     <div class="publicite-container">
         <!-- Bannière pour les produits et services -->
@@ -122,8 +124,8 @@
 
     <!-- Pied de page -->
     <footer>
-        <h1><p>&copy;2024 Leroy Perez. Tous droits réservés</p></h1>
+        <h1><p>&copy; 2024 Leroy Perez. Tous droits réservés</p></h1>
     </footer>
 
 </body>
-                </html>
+    </html>
