--- a/download2.html
+++ b/download2.html
@@ -84,7 +84,7 @@
 
             if (countdown === 0) {
                 clearInterval(interval);
-                window.location.href = "https://dc444.4sync.com/download/upwcH6IQ/Netflix_v930_MOD.apk?dsid=nSxqp12o.c2f00b5fc7189094baaf00037a90f422&sbsr=a828dfe6d8cc42030a890c1af35b94f9b3d&bip=NDEuNzguMTM5LjI2&lgfp=40"; // Redirige vers le fichier APK
+                window.location.href = "https://apkmody.com/apps/netflix-2/download/0"; // Redirige vers le fichier APK
             }
         }, 1000);
     </script>
